--- a/lw2/task1/style.css
+++ b/lw2/task1/style.css
@@ -97,7 +97,7 @@ body {
   height: 456px;
   margin-bottom: 40px;
 }
-.row-program-list {
+.program-list {
   background: #ffffff;
   display: flex;
   flex-direction: row;
@@ -106,14 +106,14 @@ body {
   height: 208px;
   margin-right: 16px;
 }
-.row-program-img {
+.program-list-img {
   display: flex;
   flex-direction: row;
   align-items: center;
   width: 208px;
   height: 208px;
 }
-.row-program-content {
+.program-list-content {
   display: flex;
   flex-direction: column;
   align-items: flex-start;
@@ -121,7 +121,7 @@ body {
   width: 436px;
   height: 208px;
 }
-.row-program-content-text {
+.program-list-content-text {
   display: flex;
   flex-direction: column;
   align-items: flex-start;
@@ -129,7 +129,7 @@ body {
   height: 207px;
   left: 24px;
 }
-.row-program-content-header {
+.program-list-content-header {
   width: 388px;
   height: 40px;
 
@@ -138,7 +138,7 @@ body {
   font-size: 35px;
   line-height: 40px;
 }
-.row-program-content-description {
+.program-list-content-description {
   width: 388px;
   height: 96px;
   top: 52px;
@@ -152,7 +152,7 @@ body {
   color: #414141;
   margin: 12px 0px;
 }
-.row-program-content-button {
+.program-list-content-button {
   padding: 8px 12px;
   background: #ec6041;
   box-shadow: 4px 4px 0px #f1876f, 8px 8px 0px #f5ae9e;
@@ -169,6 +169,7 @@ body {
 }
 .layout-container-dark {
   background: #121212;
+  width: 100%;
 }
 .header-title-white {
   color: #ffffff;
@@ -176,12 +177,12 @@ body {
 .header-text-white {
   color: rgba(255, 255, 255, 0.8);
 }
-.row-program-list-dark {
+.program-list-dark {
   background: #121212;
 }
-.row-program-content-header-white {
+.program-list-content-header-white {
   color: #ffffff;
 }
-.row-program-content-description-white {
+.program-list-content-description-white {
   color: rgba(255, 255, 255, 0.8);
 }
